--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,10 @@ body {
 }
 
 .leaflet-container {
-  height: 400px;
-  width: 600px;
-  max-width: 100%;
-  max-height: 100%;
+  height: 100%;
+  width: 100%;
+  min-width: 600px;
+  min-height: 400px;
   background: none;
 }
 
@@ -51,11 +51,12 @@ body {
   border-bottom: 1px solid rgba(6, 64, 86, 1);
 }
 
-.leaflet-bar a:hover, .leaflet-bar a:focus {
-    background-color: transparent;
+.leaflet-bar a:hover,
+.leaflet-bar a:focus {
+  background-color: transparent;
   box-shadow:
     0 0 8px 0 rgba(6, 64, 86, 0.8) inset,
-    0 0 20px 0 rgba(6, 64, 86, 0.5) inset;  
+    0 0 20px 0 rgba(6, 64, 86, 0.5) inset;
 }
 
 .leaflet-control-zoom-in,
@@ -69,4 +70,37 @@ body {
 .leaflet-control-zoom-in span,
 .leaflet-control-zoom-out span {
   color: rgba(6, 64, 86, 1);
+}
+
+td {
+  padding: 0px;
+}
+
+@media (max-width: 1024px) {
+  .leaflet-touch .leaflet-bar a {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .leaflet-touch .leaflet-control-zoom-in,
+  .leaflet-touch .leaflet-control-zoom-out {
+    font-size: 80px;
+  }
+  .leaflet-bar a {
+    background-color: transparent;
+    border-bottom: 5px solid rgba(6, 64, 86, 1);
+    border: 5px solid rgba(6, 64, 86, 1);
+    box-shadow: none;
+  }
+
+  .leaflet-bar a:last-child {
+    border-bottom: 5px solid rgba(6, 64, 86, 1);
+  }
+
+  td {
+    padding: 20px;
+  }
 }
